Updated to the latest openapi specification for the community model. Resolved problem with post /put requests (body should be parsed if app uses express.json()
