# api/openapi.yaml
@@ -62,10 +62,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/community'
-                x-content-type: application/json
+                $ref: '#/components/schemas/community'
         "400":
           description: invalid community id
       x-swagger-router-controller: Communities
@@ -130,35 +127,27 @@ paths:
         "400":
           description: invalid user id
       x-swagger-router-controller: Users
-  /users/{user-id}/generated-content:
-    put:
+  /users/update-generated-content:
+    post:
       tags:
       - users
-      summary: Add user generated content
-      description: Stores a new content generated by a user
-      operationId: addContribution
-      parameters:
-      - name: user-id
-        in: path
-        description: ID of user
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int64
+      summary: Update community model with new users
+      description: This service is employed to inform the Community Model the users
+        who where created/updated in the User Model
+      operationId: updateUsers
       requestBody:
         description: User generated content object that will be added to the model
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/generated-content'
+              type: array
+              description: The list of users that must be updated
+              items:
+                $ref: '#/components/schemas/id'
         required: true
       responses:
         "204":
-          description: User generated content successfully added
-        "400":
-          description: invalid user id
+          description: Updated
       x-swagger-router-controller: Users
   /communities/{community-id}/similarity:
     get:
@@ -315,10 +304,10 @@ components:
       description: Unique id
       format: uri
       example: d290f1ee-6c54-4b01-90e6-d701748f0851
-    generated-content:
+    user-generated-content:
       required:
       - generated-content-id
-      - parent-item-id
+      - origin-id
       - user-id
       type: object
       properties:
@@ -326,15 +315,16 @@ components:
           type: string
           description: Url to the user model information stored on Linked Data Hub
           format: uri
-        parent-item-id:
+        origin-id:
           type: string
           description: "Url to the item (artwork, museum concept...) stored on Linked\
             \ Data Hub"
           format: uri
         generated-content-id:
           type: string
-          description: "Url to complete information stored about the contribution\
-            \ (such as timestamp, context, textual contribution, multimedia...)"
+          description: "Url to complete information stored about the user generated\
+            \ conten (such as timestamp, context, textual contribution, multimedia,\
+            \ description...)"
           format: url
           example: https://...
         values:
@@ -342,17 +332,7 @@ components:
           description: A list with the values extracted from the user interaction
             and employed by the community model for the community detection algorithms
           items:
-            type: string
-            description: uri to a formal concept in SPICE ontologies
-            format: uri
-            example: "[\"https://w3id.org/spice/SON/PlutchikEmotion/Amazement\"]"
-      example:
-        generated-content-id: https://...
-        user-id: http://example.com/aeiou
-        values:
-        - "[\"https://w3id.org/spice/SON/PlutchikEmotion/Amazement\"]"
-        - "[\"https://w3id.org/spice/SON/PlutchikEmotion/Amazement\"]"
-        parent-item-id: http://example.com/aeiou
+            $ref: '#/components/schemas/usergeneratedcontent_values'
     community:
       required:
       - community-type
@@ -384,38 +364,27 @@ components:
           description: A list with the users who belong to the community
           items:
             $ref: '#/components/schemas/id'
-        contributions:
-          type: array
-          description: A list with the specific user generated content employed to
-            create this community
-          items:
-            $ref: '#/components/schemas/generated-content'
       example:
-        contributions:
-        - generated-content-id: https://...
-          user-id: http://example.com/aeiou
-          values:
-          - "[\"https://w3id.org/spice/SON/PlutchikEmotion/Amazement\"]"
-          - "[\"https://w3id.org/spice/SON/PlutchikEmotion/Amazement\"]"
-          parent-item-id: http://example.com/aeiou
-        - generated-content-id: https://...
-          user-id: http://example.com/aeiou
-          values:
-          - "[\"https://w3id.org/spice/SON/PlutchikEmotion/Amazement\"]"
-          - "[\"https://w3id.org/spice/SON/PlutchikEmotion/Amazement\"]"
-          parent-item-id: http://example.com/aeiou
         community-type: explicit
         name: elderly
         id: d290f1ee-6c54-4b01-90e6-d701748f0851
         explanation: People whose age is above 65
         users:
-        - '191'
-        - '25'
+        - "23"
+        - "24"
     similarityScore:
       type: array
       description: Schema for results that compute similarity values
       items:
         $ref: '#/components/schemas/similarityScore_inner'
+    usergeneratedcontent_values:
+      type: object
+      properties:
+        property_name:
+          type: string
+        property_value:
+          type: string
+      example: null
     similarityScore_inner:
       type: object
       properties:
@@ -432,6 +401,6 @@ components:
           description: similarity function employed to compute this similarity score
       example:
         target-community-id: d290f1ee-6c54-4b01-90e6-d701748f0851
-        other-community-id: d290f1ee-6c54-4b01-90e6-d701748f0851
+        other-community-id: d290f1ee-6c54-4b01-90e6-d701748f0852
         similarity-function: similarity-function
         value: 0.80082819046101150206595775671303272247314453125
