# service/UsersService.js
@@ -2,21 +2,6 @@
 
 
 /**
- * Add user generated content
- * Stores a new content generated by a user
- *
- * body Generated-content User generated content object that will be added to the model
- * userId Long ID of user
- * no response value expected for this operation
- **/
-exports.addContribution = function(body,userId) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
  * Communities that a user belongs
  * Returns a list with the ids of the communities that the user belongs to
  *
@@ -32,6 +17,20 @@ exports.listUserCommunities = function(userId) {
     } else {
       resolve();
     }
+  });
+}
+
+
+/**
+ * Update community model with new users
+ * This service is employed to inform the Community Model the users who where created/updated in the User Model
+ *
+ * body List User generated content object that will be added to the model
+ * no response value expected for this operation
+ **/
+exports.updateUsers = function(body) {
+  return new Promise(function(resolve, reject) {
+    resolve();
   });
 }
 
